# StudyNotes

./: README.md  TODO.txt  下载地址.txt  参考web.txt  推荐.txt  高通文档官网.txt
00指令/: ADB命令.doc  Android SQLite 调试log开关设置.txt  Linux指令.txt  Ubuntu.txt  aapt查看包名.txt  adb dumpsys.txt  adb mount.txt  adb shell.txt  adb shell删除系统apk.txt  adb 启动activity、service，发送broadcast.txt  adb进入Apex Launcher.txt  android 4的data目录、sdcard目录，fuse技术.doc  android shell pm命令.txt  android编译.txt  getevent sendevent.doc  makefile.txt  max_user_watches.txt  关于在linux下清屏的几种技巧.txt  回收vmdk文件的空间.txt  安装android studio之后eclipse出现的编译出错的问题.txt  系统备份.txt  访问window共享文件.txt
01知识碎片/: Alpha 混合：两个半透明色的叠加.doc  Android性能优化之减少UI过度绘制.doc  为啥帧率达到 60 fps 就流畅.doc  版本 Version, Release, Build 和 Edition 之间的区别.txt  百度、高德地图数据源是哪里.doc
QNX/: CCU打开nfs.md  打开nfs.md  添加编译.txt
adb/: ADB架构.md  Adb forward.txt  Linux下的adb.txt  Vysor 破解.txt  Wi-Fi Adb.txt  设置device owner.txt
android fwk/: Android日志记录模块_persistlog.docx  init进程里添加日志不打印问题.md  原生安卓wifi受限叹号及网络定位等问题.md
android hal/: (转)VINTF简介.md  CCS5.0 增加hidl程序的编译.txt  VNDK校验失败问题.md
android native/: gererate_dependency.sh  打印堆栈.md  抓systrace的命令.txt
android system/: boot.img解包.md  (+2 more)
buildtools/cmake/03-dynamic_library/: CMakeLists.txt
buildtools/cmake/03-dynamic_library/src/: Hello.cpp  main.cpp
buildtools/cmake/04-condition/: CMakeLists.txt  linux.cpp  main.cpp
buildtools/cmake/05-link_library/: CMakeLists.txt  main.cpp
buildtools/cmake/05-link_library/sub1/: CMakeLists.txt  Hello.h  hello.cpp
buildtools/cmake/05-link_library/sub2/: CMakeLists.txt  welcome.cpp  welcome.h
(+293 files in other folders)
